--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container" id="container">
       <div class="form-container sign-up">
         <form>
-          <h1>Create Account</h1>
+          <h2>Create an account</h2>
           <div class="social-icons">
             <a href="#" class="icon"
               ><i class="fa-brands fa-google-plus-g"></i
@@ -40,7 +40,7 @@
 
       <div class="form-container sign-in">
         <form>
-          <h1>Sign In</h1>
+          <h1>Login In</h1>
           <div class="social-icons">
             <a href="#" class="icon"
               ><i class="fa-brands fa-google-plus-g"></i
@@ -55,7 +55,7 @@
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
           <a href="#">Forgot Your Password?</a>
-          <button>Sign In</button>
+          <button>Log In</button>
         </form>
       </div>
 
@@ -64,7 +64,7 @@
           <div class="toggle-panel toggle-left">
             <h1>Welcome Back!</h1>
             <p>Enter your personal details to use all site features</p>
-            <button class="hidden" id="login">Sign In</button>
+            <button class="hidden" id="login">Log In</button>
           </div>
           <div class="toggle-panel toggle-right">
             <h1>Hello, Friend!</h1>
