--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="form-container sign-in">
         <form>
-          <h1>Login In</h1>
+          <h1>Log In</h1>
           <div class="social-icons">
             <a href="#" class="icon"
               ><i class="fa-brands fa-google-plus-g"></i
